# Flux

./: CMakeLists.txt  CMakePresets.json  embed_shaders.py
shaders/: particle.comp  particle.frag  particle.vert
src/: main.cpp
src/EngineClass/: Engine.cpp  Engine.h  EngineMain.cpp
src/ShaderClass/: Shader.cpp  Shader.h
src/WindowClass/: Window.cpp  Window.h
